--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,3 @@
-<ul>
-  <li *ngFor="let tarefa of tarefas">{{ tarefa.tarefa }}</li>
-</ul>
+<div *ngFor="let tarefa of tarefas">
+  <app-task-item [tarefa]="tarefa"></app-task-item>
+</div>
